Renommer "Territoire" en "Espace"
