# app/policies/agent/webhook_endpoint_policy.rb
@@ -21,7 +21,7 @@ class Agent::WebhookEndpointPolicy < ApplicationPolicy
 
   # On a deux scopes différents qui correspondent à deux choix produits différents :
   # - dans l'api on vérifie que l'agent a un rôle dans l'organisation du webhook
-  # - dans l'espace admin, on commence à permettre d'administrer un territoire sans être admin de toutes
+  # - dans l'espace admin, on commence à permettre d'administrer un espace sans être admin de toutes
   #   ses organisations, ce qui permet de ne pas avoir accès à toutes les données personnelles des
   #   rdvs et de usagers
   #
